--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ project(':plugin-rust-agent') {
         compile project(':plugin-rust-common')
         provided "org.jetbrains.teamcity.internal:agent:${teamcityVersion}"
         testCompile 'org.testng:testng:6.8'
+        testCompile 'org.jmock:jmock:2.5.1'
     }
     agentPlugin.version = null
 }
