Convert to kotlin

--- a/plugin-rust-common/build.gradle
+++ b/plugin-rust-common/build.gradle
@@ -2,6 +2,10 @@ plugins{
     id 'com.github.rodm.teamcity-common' version '0.9.1'
 }
 
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+}
+
 teamcity {
     version = teamcityVersion
 }
