--- a/plugin-rust-agent/build.gradle
+++ b/plugin-rust-agent/build.gradle
@@ -13,6 +13,7 @@ teamcity {
 
 dependencies {
     compile project(':plugin-rust-common')
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     provided "org.jetbrains.teamcity.internal:agent:${teamcityVersion}"
     testCompile 'org.testng:testng:6.8'
     testCompile 'org.jmock:jmock:2.5.1'
