--- a/plugin-rust-server/build.gradle
+++ b/plugin-rust-server/build.gradle
@@ -13,8 +13,8 @@ teamcity {
 
 dependencies {
     compile project(':plugin-rust-common')
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     provided 'javax.servlet:jstl:1.1.2'
-
     agent project(path: ':plugin-rust-agent', configuration: 'plugin')
 }
 
