--- a/plugin-rust-agent/build.gradle
+++ b/plugin-rust-agent/build.gradle
@@ -14,6 +14,7 @@ teamcity {
 dependencies {
     compile project(':plugin-rust-common')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "com.github.zafarkhaja:java-semver:0.9.0"
     provided "org.jetbrains.teamcity.internal:agent:${teamcityVersion}"
     testCompile 'org.testng:testng:6.8'
     testCompile 'org.jmock:jmock:2.5.1'
