--- a/plugin-rust-common/build.gradle
+++ b/plugin-rust-common/build.gradle
@@ -1,9 +1,9 @@
 plugins{
-    id 'com.github.rodm.teamcity-common' version '0.9.1'
+    id 'com.github.rodm.teamcity-common' version '1.0'
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+    compile "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
 teamcity {
