--- a/plugin-rust-server/build.gradle
+++ b/plugin-rust-server/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.github.rodm.teamcity-server' version "0.9.1"
+    id 'com.github.rodm.teamcity-server' version "1.0"
 }
 
 teamcity {
@@ -13,14 +13,18 @@ teamcity {
 
 dependencies {
     compile project(':plugin-rust-common')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     provided 'javax.servlet:jstl:1.1.2'
     agent project(path: ':plugin-rust-agent', configuration: 'plugin')
 }
 
 serverPlugin.version = null
 
-tasks.withType(JavaCompile) {
-    sourceCompatibility = "1.8"
-    targetCompatibility = "1.8"
+compileKotlin {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
