Try to automatically recover from toolchain install failures
Issue: #37

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ allprojects {
 subprojects {
     apply plugin: "kotlin"
 
+    kotlin { experimental { coroutines 'enable' } }
+
     test.useTestNG()
     jar.version = null
 
