--- a/plugin-rust-server/build.gradle
+++ b/plugin-rust-server/build.gradle
@@ -12,10 +12,11 @@ teamcity {
 }
 
 dependencies {
+    agent project(path: ':plugin-rust-agent', configuration: 'plugin')
+    
     compile project(':plugin-rust-common')
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    provided 'javax.servlet:jstl:1.1.2'
-    agent project(path: ':plugin-rust-agent', configuration: 'plugin')
+    provided "org.jetbrains.teamcity.internal:server:$teamcityVersion"
 }
 
 serverPlugin.version = null
