--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
-plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.2.10"
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+    }
 }
 
 ext {
@@ -7,6 +13,13 @@ ext {
     versionNumber = correctVersion ? property('versionNumber') : 'SNAPSHOT-' + new Date().format('yyyyMMddHHmmss')
     projectIds = ['group': 'teamcity-rust-plugin', 'version': versionNumber]
     teamcityVersion = project.hasProperty('teamcityVersion') ? property('teamcityVersion') : '2018.1'
+
+    coroutinesVersion = "1.3.8"
+
+    downloadsDir = project.findProperty('downloads.dir') ?: "$rootDir/downloads"
+    serversDir = project.findProperty('servers.dir') ?: "$rootDir/servers"
+
+    java8Home = project.findProperty('java8.home') ?: '/opt/jdk1.8.0_92'
 }
 
 group = projectIds.group
@@ -20,11 +33,13 @@ allprojects {
 subprojects {
     apply plugin: "kotlin"
 
-    kotlin { experimental { coroutines 'enable' } }
+    dependencies {
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${coroutinesVersion}")
+    }
 
     test.useTestNG()
     jar.version = null
 
-    sourceCompatibility = "1.6"
-    targetCompatibility = "1.6"
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
 }
