--- a/plugin-rust-server/build.gradle
+++ b/plugin-rust-server/build.gradle
@@ -1,5 +1,7 @@
 plugins {
-    id 'com.github.rodm.teamcity-server' version "1.0"
+    id 'java'
+    id 'com.github.rodm.teamcity-server' version "1.3"
+    id 'com.github.rodm.teamcity-environments' version '1.3'
 }
 
 teamcity {
@@ -8,6 +10,17 @@ teamcity {
     server {
         descriptor = project.file('teamcity-plugin.xml')
         tokens = [Plugin_Version: project.version]
+
+        environments {
+            downloadsDir = project.downloadsDir
+            baseHomeDir = project.serversDir
+            baseDataDir = 'data'
+
+            'teamcity2020.1' {
+                version = '2020.1'
+                javaHome = file(java8Home)
+            }
+        }
     }
 }
 
