--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,10 @@
+#
+# Copyright 2000-2021 JetBrains s.r.o.
+#
+# Licensed under the Apache License, Version 2.0 (the "License").
+# See LICENSE in the project root for license information.
+#
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-6.6.1-bin.zip
